# scraper

./: .gitignore  pyproject.toml
core/apps/bounds/entities/: coordinates.py
core/apps/bounds/services/: coordinates.py
core/apps/daysNnumbers/entities/: classesc_count.py  days.py
core/apps/daysNnumbers/services/: classes_count.py  days.py
core/apps/groups/entities/: group.py
core/apps/groups/services/: groups.py
core/apps/lesson_extractor/services/: lesson_extractor.py  lesson_parser.py
core/bounds/services/: coordinates.py
core/common/: constants.py  entities.py  target_word.py  utils.py
core/groups/services/: groups.py
core/starter/: json_dumper.py  main.py  workbook_loader.py
core/type_formatter/: json_loader.py  subject.py  teacher.py
