[tool.poetry]
name = "excelscraper-2-0"
version = "0.1.0"
description = ""
authors = ["SaiGerkat <illyakrykalov@gmail.com>"]
readme = "README.md"
packages = [{include = "excelscraper_2"}]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
